--- a/processing/notebooks/binning.ipynb
+++ b/processing/notebooks/binning.ipynb
@@ -19,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.chdir(\"..\")\n",
     "os.chdir(\"..\")"
    ]
   },
@@ -1593,12 +1594,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name_ext = os.path.basename(file)\n",
-    "file_name = os.path.splitext(file_name_ext)[0]\n",
-    "ext = os.path.splitext(file_name_ext)[1]\n",
-    "new_file_name = \"data/unprocessed/binned/\"+file_name+\"_bin\"+str(bin_size)+ext\n",
+    "# file_name_ext = os.path.basename(file)\n",
+    "# file_name = os.path.splitext(file_name_ext)[0]\n",
+    "# ext = os.path.splitext(file_name_ext)[1]\n",
+    "# new_file_name = \"data/unprocessed/binned/\"+file_name+\"_bin\"+str(bin_size)+ext\n",
     "\n",
-    "binned_bac.to_csv(new_file_name, index=False, mode='w')"
+    "# binned_bac.to_csv(new_file_name, index=False, mode='w')"
    ]
   }
  ],
